configuration/gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: main-gateway
  namespace: istio-config
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "*"
      port:
        number: 80
        name: http
        protocol: HTTP
